added ability to calculate current date and dayname